<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">


    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_tab_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Carros"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_tab_favourity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="Favoritos"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_tab_cars"
        app:layout_constraintTop_toTopOf="@+id/tv_tab_cars" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="24dp"
        android:outlineAmbientShadowColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tab_favourity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/aldeidando2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 12.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toTopOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_batery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="93,4 kWh"
                app:layout_constraintStart_toEndOf="@id/tv_batery"
                app:layout_constraintTop_toTopOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_power"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_power_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="646 cv"
                app:layout_constraintStart_toEndOf="@id/tv_power"
                app:layout_constraintTop_toTopOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_reload"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_reload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_reload_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="23 min"
                app:layout_constraintStart_toEndOf="@id/tv_reload"
                app:layout_constraintTop_toTopOf="@id/tv_reload"
                app:layout_constraintBottom_toBottomOf="@+id/cl_card_content"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_calcular_autonomia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>