<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/cv_grey"
        app:cardCornerRadius="24dp"
        app:cardElevation="24dp"
        android:outlineAmbientShadowColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_star"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/aldeidando2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car" />

            <TextView
                android:id="@+id/tv_price_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 12.000,00"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintTop_toTopOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_batery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_price" />

            <TextView
                android:id="@+id/tv_batery_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="93,4 kWh"
                app:layout_constraintStart_toEndOf="@id/tv_batery"
                app:layout_constraintTop_toTopOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_power"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_power"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_batery" />

            <TextView
                android:id="@+id/tv_power_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="646 cv"
                app:layout_constraintStart_toEndOf="@id/tv_power"
                app:layout_constraintTop_toTopOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_reload"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/tv_reload"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_power" />

            <TextView
                android:id="@+id/tv_reload_value"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="23 min"
                app:layout_constraintStart_toEndOf="@id/tv_reload"
                app:layout_constraintTop_toTopOf="@id/tv_reload"
                app:layout_constraintBottom_toBottomOf="@+id/cl_card_content"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>